[package]
name = "owlcom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio ={version="1",features = ["full"]}
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = {version = "0.50", optional = true, features=["full"]}
reqwest = {version = "0.11", features=["json","multipart","stream"]}
owlcom_derive = {path="../owlcom_derive"}
async-trait = "0.1"
libp2p-mplex = {version = "0.38", optional=true}
libp2p-tcp = {version = "0.38.0",optional=true}
libp2p-noise = {vserion="0.41.0",optional=true}

[features]
ipfs=[]
p2p=["dep:libp2p","dep:libp2p-mplex","dep:libp2p-tcp","dep:libp2p-noise"]
full=["ipfs","p2p"]